--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image bg-img-1 active">
                     <div class="carousel-caption d-md-block d-xs-block">
+                        <div class="p-card">
+                            <p>Next Information meeting for students, parents and sponsors <span>27th Feb 2024</span> at <span>5pm</span> on the School's premises</p>
+                        </div>
                         <p class="p-size">Guten Tag! Willkommen bei der</p>
                         <h1>Prima German Language School in Abuja!</h1>
                         <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
@@ -107,7 +110,7 @@
                                 <i class="bi bi-mortarboard-fill"></i>
                                 <div class="bdy1">
                                     <h5>Hybrid Courses</h5>
-                                    <p>A combination of Online and Face-to-Face instructions in our classroom in Jabi</p>
+                                    <p>A combination of Online and Face-to-Face instructions in our classrooms in Jabi</p>
                                 </div>
                             </div>
                             <div class="card-items">
@@ -130,10 +133,10 @@
                 <div class="col">
                     <div class="card row-col-md-4 h-100">
                         <div class="card-header">
-                            <h5>Course Duration Structure Prices</h5>
+                            <h5>Courses/Duration/Structure/Prices</h5>
                         </div>
                         <div class="card-body text-left">
-                            <p class="card-text">Interview to tailor your course to individual language level of the student.</p>
+                            <p class="card-text">Interview to tailor your course to individual language level of the student</p>
                             <p class="card-text">Advise on the level needed for your specific career path</p>
                             <p class="card-text">Trial class free of charge</p>
                             <h6 class="text-danger">For further information please contact the Admin Office</h6>
@@ -153,7 +156,7 @@
                                             <strong><p>Nigeria:</p></strong><a href="# " class="text-dark ">+234 803 3678 987</a></div>
                                         <br/>
                                         <div>
-                                            <strong><p>German:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
+                                            <strong><p>Germany:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -259,7 +262,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-text">Access world-class education with the lowest tuition fees in the European Union! Apply for various degree levels in over 600 state and private institutions. <br>For Nigerians: learning German opens doors to these prestigious
-                                institutions and bright academic prospects
+                                institutions and bright academic prospects.
                             </p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
@@ -271,7 +274,7 @@
                             <h5 class="card-title">Powerful Economies</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and job markets</p>
+                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and job markets.</p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -282,7 +285,7 @@
                             <h5 class="card-title">Expert Preparation: All Levels</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">From A1 to C1, Prima caters to all levels. Our courses prepare you for exams by the Goethe Institute and others, earning you internationally recognized Language Proficiency certificates </p>
+                            <p class="card-text">From A1 to C1, Prima caters to all levels. Our courses prepare you for exams by the Goethe Institute and others, earning you internationally recognized Language Proficiency certificates.</p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -293,8 +296,8 @@
                             <h5 class="card-title">Visa Success</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Language Certificates are required for Students and Skilled Work Visa applications<br> We advise you on the language levels needed for your success and career.<br> <strong>Special Consultation:</strong> Individual consultation
-                                can be booked for University and Job Applications, time frames, and fees
+                            <p class="card-text">Language Certificates are required for Students and Skilled Work Visa applications.<br> We advise you on the language levels needed for your success and career.<br> <strong>Special Consultation:</strong> Individual consultation
+                                can be booked for University and Job Applications, time frames, and fees.
                             </p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
@@ -403,7 +406,7 @@
                                         <strong><p>Nigeria:</p></strong><a href="# " class="text-dark ">+234 803 3678 987</a></div>
                                     <br/>
                                     <div>
-                                        <strong><p>German:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
+                                        <strong><p>Germany:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
                                 </div>
                             </div>
                         </div>
