--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="container pt-5 pb-3">
             <h2 class="text-center">Choose our German Language School</h2>
             <div class="row row-cols-md-2 pt-3">
-                <div class="bg-img" style="background-image: url('./asset/img/school.jpg');"></div>
+                <div class="bg-img" style="background-image: url('./asset/img/school.webp');"></div>
                 <div>
                     <p>At <span class="prima">Prima</span> German Language School, we are dedicated to achieving high rates of success in learning the German language by implementing effective and enjoyable modern teaching techniques.
                     </p>
@@ -313,7 +313,7 @@
             <div class="row row-cols-2 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 g-2 pt-3">
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/elizabert.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/elizabert.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ms. Elisabeth</h5>
                             <p class="card-text">Admin</p>
@@ -322,7 +322,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/saheed.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/saheed.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Mr. Sa'eed</h5>
                             <p class="card-text">Teacher</p>
@@ -331,7 +331,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/gabi.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/gabi.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ms. Gabi</h5>
                             <p class="card-text">Teacher</p>
@@ -340,7 +340,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/Maria.jpg" class="card-img-top" alt="...">
+                        <img src="./asset/img/Maria.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ms. Maria</h5>
                             <p class="card-text">Teacher</p>
@@ -349,7 +349,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/ida.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/ida.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ida</h5>
                             <p class="card-text">Teachers's Assistant</p>
@@ -358,7 +358,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/tabitha.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/tabitha.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Tabitha</h5>
                             <p class="card-text">German Conversation</p>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="./asset/img/samuel.JPG" class="card-img-top" alt="...">
+                        <img src="./asset/img/samuel.webp" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Samuel</h5>
                             <p class="card-text">IT Technician</p>
