pink card adjjusment

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image bg-img-1 active">
-                    <div class="carousel-caption d-md-block d-xs-block">
+                    <div class="p-position text-light">
                         <div class="p-card">
                             <p>Next Information meeting for students, parents and sponsors <span>27th Feb 2024</span> at <span>5pm</span> on the School's premises</p>
                         </div>
-                        <p class="p-size">Guten Tag! Willkommen bei der</p>
+                    </div>
+                    <div class="carousel-caption d-md-block d-xs-block">
+                        <p class="p-size ">Guten Tag! Willkommen bei der</p>
                         <h1>Prima German Language School in Abuja!</h1>
-                        <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
+                        <!--<a href=" "><button type="button " class="btn btn-warning ">APPLY NOW</button></a>-->
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-2">
